--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
        <a href="https://1q2w3e-4r5t6y.github.io/hiakyu_nobu/">
         <img src="nobu.jpg" width="100" height"100">
         <div class="kana_2">たかみつ　のぶよし</div>
-        <div class="kanji_2">高光　宜美</div>
+        <div class="kanji_2">髙光　宜美</div>
         <div class="gakubu_2">工学部<br>機械工学科</div>
        </a>
       </li>
